# PythonBase

./: .gitignore  README.md  main.py  pyproject.toml  run_tts.bat
docs/: 01 环境管理工具-UV.md  02 Python打包应用-Nuitka.md  02 Python打包应用-Nuitka帮助_中英对照.md  02 Python打包应用-Nuitka帮助_英文.md  02 Python打包应用-PyInstaller.md  02 Python打包应用-PyStand.md  02 Python打包应用-嵌入式Python.md  02 环境管理工具-Conda.md  03 Git使用技巧.md  03 环境管理工具-Mamba.md  04 环境管理工具-Micromamba（推荐）.md  ChangeLogs.md  Gemini OpenAI 兼容性设置.md  OCR选择.md  Spark-TTS Windows安装教程.md  ai.md  gitee使用技巧.md  github加速.md  uv修改项目python版本.md  儿童绘本优化方法.md  功能需求.md  开发说明.md  英伟达Cuda安装.md
docs/Code工具基础/: Micromamba简介.md
src/PDFPlus/: PDF压缩助手.py  README.md
src/Python_Tool/ahkTools By Python/: config python.ini
src/aichat/: __init__.py  config.toml.txt  llm_gemini.py  llm_openai.py
src/aichat/test/: text_chat_from_file.py
src/ocr/: README.md  gemini_ocr_service.py  paddle_ocr_service.py
src/script/: README.md  convert_wav_to_mp3.bat  convert_wav_to_mp3.py  merge_audio.bat
src/tts/: README.md  api文档.md  tts_api_client.py
src/utils/: json_to_txt_converter.py  pdf_to_image_converter.py  polish_book_openai.py  txt_splitter.py
