[project]
name = "pythonbase"
version = "0.1.0"
description = "Python 基础功能学习"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "gradio-client>=1.8.0",
    "image>=1.5.33",
    "openai>=1.75.0",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.0.0",
    "pillow>=11.2.1",
    "pymupdf>=1.25.5",
    "pypdf>=5.4.0",
    "requests>=2.32.3",
    "toml>=0.10.2",
]
